# icsor-r1-arch

./: .gitignore  CODEBASE_RULES.md  README.md  comparison.ipynb  pyproject.toml  simulation.ipynb
config/: params.json  paths.json
data/: carbon_source_pao_denitrifiers_biological_model_description.md
data/asm2d-tsn/: asm2d_tsn_workbook.xlsx  asm2d_tsn_workbook_reconstruction.md
docs/DCHE-D-26-00020/: figure_style_guide.md  manuscript.tex  submission_guideline.md  supplementary_material.tex
docs/DCHE-D-26-00020R1/: cover_letter.tex  declaration_of_competing_interest.tex  manuscript.tex  response_to_reviewers.tex  reviewer_1_comments.md  submission_guideline.md
docs/Elsevier LaTeX Guidelines/: faqs_submission_manager_latex.md
docs/article/: ICSOR-LP_CoupledQP.md  ICSOR-LP_OLS.md  ICSOR-LP_Ridge.md  ICSOR-Weighted.md
docs/journal/: dce.aux  dce.tex  dce_part1.aux  dce_part1.tex  dce_part2.aux  dce_part2.tex
docs/methodology/: cross_model_comparison_discussion.md  orthogonal_null_space_projection.md
docs/ml/: .gitkeep  adaboost_regressor.md  ann_deep_regressor.md  ann_medium_regressor.md  ann_shallow_regressor.md  catboost_regressor.md  icsor.md  icsor_coupled_qp.md  knn_regressor.md  lightgbm_regressor.md  pls_regressor.md  random_forest_regressor.md  svr_regressor.md  tabicl_regressor.md  tabpfn_regressor.md  xgboost_regressor.md
docs/simulation/: asm2d_tsn_simulation.md
src/: __init__.py
src/models/: __init__.py
src/utils/: __init__.py  analysis.py  io.py  (+7 more)
tools/: generate_graphical_abstract.py  generate_submission_interpretability_figures.py
(+52 files in other folders)
